package Week4.opgave101overervingshierarchie;

public class Levensvorm {
}
