package Week4.opgave101overervingshierarchie.dier;

public class Dier {
}
