package Week4.opgave101overervingshierarchie.mens;

public class Kiwi extends Mens{
}
