package Week4.opgave101overervingshierarchie.mens;

import Week4.opgave101overervingshierarchie.dier.Dier;

public class Mens extends Dier {
}
