package Week4.opgave101overervingshierarchie.vrucht;

import Week4.opgave101overervingshierarchie.Levensvorm;

public class Vrucht extends Levensvorm {
}
